; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_read_word.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_read_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c67x00_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.c67x00_device*, i32)* @hpi_read_word to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hpi_read_word(%struct.c67x00_device* %0, i32 %1) #0 {
  %3 = alloca %struct.c67x00_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.c67x00_device* %0, %struct.c67x00_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.c67x00_device*, %struct.c67x00_device** %3, align 8
  %8 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.c67x00_device*, %struct.c67x00_device** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @hpi_read_word_nolock(%struct.c67x00_device* %12, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load %struct.c67x00_device*, %struct.c67x00_device** %3, align 8
  %16 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @spin_unlock_irqrestore(i32* %17, i64 %18)
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @hpi_read_word_nolock(%struct.c67x00_device*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
